--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     }
   ],
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "spryker/zed-request": "^3.0.0",
+    "spryker/company-extension": "^1.0.0"
   },
   "require-dev": {
     "codeception/codeception": "^2.4",
@@ -28,7 +30,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "FondOfSpryker\\": "tests/FondOfSpryker/"
+      "FondOfSpryker\\": "tests/FondOfSpryker/",
+      "Generated\\": "src/Generated/"
     }
   }
 }
