--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,22 @@
       "email": "daniel-rose@gmx.de"
     }
   ],
+  "scripts": {
+    "test": "make codeception",
+    "phpcs": "make phpcs",
+    "phpstan": "make phpstan"
+  },
   "require": {
-    "php": ">=7.1",
-    "spryker/zed-request": "^3.0.0",
-    "spryker/company-extension": "^1.0.0"
+    "php": ">=7.3",
+    "spryker/checkout-extension": "^1.2.0",
+    "spryker/company-extension": "^1.0.0",
+    "spryker/quote-extension": "^1.2.0",
+    "spryker/zed-request": "^3.0.0"
   },
   "require-dev": {
-    "codeception/codeception": "^2.4",
     "fond-of-codeception/spryker": "^1.0",
-    "php-coveralls/php-coveralls": "^2.1",
-    "sebastian/phpcpd": "^4.0",
-    "spryker/code-sniffer": "^0.12"
+    "spryker/code-sniffer": "*",
+    "spryker-sdk/phpstan-spryker": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -30,7 +35,8 @@
   "autoload-dev": {
     "psr-4": {
       "FondOfSpryker\\": "tests/FondOfSpryker/",
-      "Generated\\": "src/Generated/"
+      "Generated\\": "src/Generated/",
+      "Orm\\Zed\\": "src/Orm/Zed/"
     }
   }
 }
