💲 Add currency to company entity - connect currency with company table (per foreign key "fk_currency" in table "spy_company") - add phpstan support - include phpstan in github workflows - add phpstan fixes - add phpcs fixes - ...

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Run test suite
         env:
           XDEBUG_MODE: coverage
-        run: composer run-script test
+        run: composer run-script ci
