--- a/codeception.yml
+++ b/codeception.yml
@@ -36,4 +36,4 @@ env:
         \FondOfCodeception\Module\Spryker:
           generate_transfer: true
           generate_map_classes: false
-          generate_propel_classes: false
+          generate_propel_classes: true
