--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     }
   ],
   "scripts": {
-    "test": "make codeception",
+    "ci": "make ci",
+    "codeception": "make codeception",
     "phpcs": "make phpcs",
     "phpstan": "make phpstan"
   },
@@ -37,6 +38,11 @@
       "FondOfSpryker\\": "tests/FondOfSpryker/",
       "Generated\\": "src/Generated/",
       "Orm\\Zed\\": "src/Orm/Zed/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
 }
